# offline-tts

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  txt_to_audio.py
.github/workflows/: ci.yml
scripts/: download_mms_hu.py  download_xtts_v2.py  test_mms_hu_local.py  txt_to_hu_mp3_mms.py
src/offline_hungarian_tts/: audio.py  cli.py  downloads.py  pipeline.py
src/offline_hungarian_tts/engines/: __init__.py  base.py  mms_engine.py  xtts_engine.py
tests/: test_cli_and_scripts.py  test_engines.py  test_txt_to_audio.py
tts_engines/: __init__.py  base.py  mms_engine.py  piper_engine.py  xtts_engine.py
